--- a/2_eap7/dockerfile
+++ b/2_eap7/dockerfile
@@ -1,6 +1,6 @@
 FROM scottysinclair/java8
 
-RUN apt-get update && apt-get install -y less && apt-get install -y telnet
+RUN apt-get update && apt-get install -y less && apt-get install -y telnet && apt-get install -y iputils-ping 
 
 # Create a user and group used to launch processes
 # The user ID 1000 is the default for the first "regular" user on Fedora/RHEL,
