--- a/3_eap-test/dockerfile
+++ b/3_eap-test/dockerfile
@@ -1,6 +1,15 @@
 #TAKE THE STANDARD EAP7 CONTAINER
 FROM eap7
 
+USER root
+
+RUN mkdir /opt/dockerclient
+COPY docker-client-commandline-1.0.0-SNAPSHOT.jar /opt/dockerclient/
+COPY log4j.properties /opt/dockerclient/
+RUN echo "#!/bin/bash" > /opt/dockerclient/exec.sh && \
+echo "cd /opt/dockerclient/" >> /opt/dockerclient/exec.sh && \
+echo "java -Dlog4j.configuration=file:log4j.properties -cp docker-client-commandline-1.0.0-SNAPSHOT.jar com.scott.docker.commandline.ExecuteCommand \$@" >> /opt/dockerclient/exec.sh && chmod uga+x /opt/dockerclient/exec.sh
+
 USER jboss
 
 #COPY OVER THE STANDALONE.XML WHICH DEFINES THE POSTGRES DATASOURCES
@@ -12,7 +21,6 @@ RUN mkdir /opt/eap7/modules/org/postgresql
 RUN mkdir /opt/eap7/modules/org/postgresql/main
 COPY postgresql-driver-module.xml /opt/eap7/modules/org/postgresql/main/module.xml
 COPY postgresql-42.0.0.jar /opt/eap7/modules/org/postgresql/main/
-
 
 
 ENTRYPOINT $JBOSS_HOME/bin/standalone.sh -b 0.0.0.0
