--- a/4_db2/dockerfile
+++ b/4_db2/dockerfile
@@ -1,2 +1,19 @@
-FROM ibmcom/db2express-c
-ENTRYPOINT su - db2inst1 -c "db2start && db2 create db test"
+#FOR SOME REASON I COULDN'T GET DB2EXPRESS WORKING, WITHOUT TWEAKING, SO I EXCUTED THE FOLLOWING IN  CONTAINER
+#AND COMMITED AS scottysinclair/db2-express
+#
+#FROM ibmcom/db2express-c
+#
+#docker run -it -p 50000:50000 -e DB2INST1_PASSWORD=db2inst1-pwd -e LICENSE=accept ibmcom/db2express-c:latest bash
+#
+#su - db2inst1
+#
+#db2start
+#
+#db2 create db test
+#
+#db2stop
+FROM scottysinclair/db2-express
+
+USER db2inst1
+
+ENTRYPOINT . /home/db2inst1/sqllib/db2profile &&  db2start && tail -f /dev/null
